--- a/backend/ModernWMS.Core/Models/MultiLanguage.zh-cn.resx
+++ b/backend/ModernWMS.Core/Models/MultiLanguage.zh-cn.resx
@@ -158,6 +158,9 @@
   <data name="save_success" xml:space="preserve">
     <value>保存成功</value>
   </data>
+  <data name="status_not_delete" xml:space="preserve">
+    <value>当前状态不可删除</value>
+  </data>
   <data name="username" xml:space="preserve">
     <value>用户名</value>
   </data>
