fix dispatchlist entity 's ForeignKey

--- a/backend/ModernWMS.Core/Models/MultiLanguage.zh-cn.resx
+++ b/backend/ModernWMS.Core/Models/MultiLanguage.zh-cn.resx
@@ -123,6 +123,9 @@
   <data name="customer_name" xml:space="preserve">
     <value>客户名称</value>
   </data>
+  <data name="data_changed" xml:space="preserve">
+    <value>数据发生改变，请刷新后重试操作</value>
+  </data>
   <data name="delete_failed" xml:space="preserve">
     <value>删除失败</value>
   </data>
@@ -147,6 +150,12 @@
   </data>
   <data name="not_exists_entity" xml:space="preserve">
     <value>数据不存在或已被删除</value>
+  </data>
+  <data name="operation_failed" xml:space="preserve">
+    <value>操作失败</value>
+  </data>
+  <data name="operation_success" xml:space="preserve">
+    <value>操作成功</value>
   </data>
   <data name="Required" xml:space="preserve">
     <value>{0}必填</value>
