--- a/backend/ModernWMS.Core/Models/MultiLanguage.en-us.resx
+++ b/backend/ModernWMS.Core/Models/MultiLanguage.en-us.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-    <data name="carrier" xml:space="preserve">
+  <data name="carrier" xml:space="preserve">
     <value>carrier</value>
   </data>
   <data name="departure_city" xml:space="preserve">
@@ -532,7 +532,7 @@
     <value>Quantity</value>
   </data>
   <data name="data_changed" xml:space="preserve">
-    <value>The data has changed,please refresh and retry the operation</value>
+    <value>The data has changed.Please refresh and retry the operation</value>
   </data>
   <data name="delete_failed" xml:space="preserve">
     <value>Delete failed</value>
@@ -568,7 +568,7 @@
     <value>Success</value>
   </data>
   <data name="status_changed" xml:space="preserve">
-    <value>The status of this data has changed,please refresh and retry the operation</value>
+    <value>The status of this data has changed.Please refresh and retry the operation</value>
   </data>
   <data name="status_not_delete" xml:space="preserve">
     <value>Current status cannot be deleted</value>
@@ -605,5 +605,14 @@
   </data>
   <data name="sorted_failed" xml:space="preserve">
     <value>Sorted failed</value>
+  </data>
+  <data name="try_agin" xml:space="preserve">
+    <value>The current operation cannot be performed. Please refresh and try again</value>
+  </data>
+  <data name="unpackgeqty_lessthen" xml:space="preserve">
+    <value>Unpacked quantity is less than the quantity to be packed</value>
+  </data>
+  <data name="unweightqty_lessthen" xml:space="preserve">
+    <value>Unweighed quantity is less than the quantity to be weighed</value>
   </data>
 </root>
